# Terrarium

./: .env.example  .gitignore  README.md  mix.exs  person-2.md  plan.md  setup.md
apps/api/: mix.exs
apps/scheduler/: mix.exs
apps/scheduler/lib/: scheduler.ex
apps/worker/: README.md  mix.exs
apps/worker/lib/: worker.ex
artifacts/: Context.md  PHASE2-IMPLEMENTATION.md  Revision.md  design.md  distributed-scheduler-prerequisites.md  person-1.md  person-2.md  person-3-summary.md  person-3.md  person-4.md  scheduler-schema-v1.md  task-person-3.md  wsl-aws-firecracker-setup.md
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
frontend/: package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
frontend/src/: App.tsx  Desktop.tsx  index.css  main.tsx
frontend/src/apps/: registry.ts
frontend/src/desktop/: DesktopIcons.tsx  Taskbar.tsx
frontend/src/dock/: Dock.tsx  DockIcon.tsx  DockLabel.tsx  useDockMagnification.ts
infra/dynamodb/: create-tables.ps1
infra/ec2/: README.md  launch-firecracker-host.ps1  terminate-firecracker-host.ps1  user-data-firecracker.sh
infra/terraform/: main.tf  outputs.tf  variables.tf
rust/jailer/: Cargo.toml
rust/jailer/src/: cgroups.rs  main.rs  seccomp.rs
scripts/: bootstrap_ubuntu_worker.sh  create_snapshot.sh  load_validate_worker.exs  phase5_validate.sh  run_load_validation.sh  run_snapshot_fidelity.sh  snapshot_fidelity_validate.exs  start_worker.sh  validate_isolation.sh  validate_worker_recovery.exs
scripts/distrubuted-scheduler/: setup-prerequisites.ps1
(+101 files in other folders)
