[package]
name = "infinity-jailer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "infinity-jailer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
nix = { version = "0.27", features = ["process", "signal", "resource", "user"] }
seccomp = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
